# popver

./: .gitignore  Makefile  README.md  pyproject.toml
data/: upd1000.sh
popver/: __init__.py  __main__.py  cli.py  metadata.py  selection.py  version_compat.py
popver/tests/: __main__.py  cli.py  metadata.py  selection.py  version_compat.py
popver/tests/data/: tf-nightly.html
